styles/style-index.css
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

body {
  font-family: "Roboto Condensed", sans-serif;
  background-color: #cc3006;
  margin: 0;
  min-width: 414px;
}
.mainContentContainer {
  min-width: 414px;
  height: 80vh;
}

.titleHeader {
  display: flex;
  flex-direction: row;
  gap: 2px;
  margin: 30px;
}
.logo {
  margin: 30px;
  width: 60px;
}

.titleQuestion {
  font-size: 20px;
  text-align: center;
  color: white;
  display: flex;
  align-items: center;
}

.titleContent {
  display: flex;
  width: 100%;
  flex-direction: column;
  gap: 20px;
}

.contentContainer {
  display: flex;
  align-items: center;
  flex-direction: column;
  background-color: #ff7b57;

  padding: 0px 20px 0px 20px;
  margin: 0px 30px 0px 30px;

  gap: 5px;

  text-align: center;

  border: 2px solid #fff;
  border-radius: 12px;
}

.title {
  font-size: 22px;
  padding-top: 20px;
  color: #fff;
  letter-spacing: 1px;
}

.subtitle {
  font-size: 16px;
  color: #dfdfdf;
  letter-spacing: 1px;
}

.content {
  padding-bottom: 5px;
  font-size: 16px;
  color: #fff;
  letter-spacing: 1px;
}

.resumeContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.resumeImage {
  width: 410px;
  padding-right: 5px;
}

.mainQuestion {
  height: 500px;
}

.mainQuestionContent {
  color: #fff;
  margin: 20px;
  text-align: justify;
}

.footer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;

  gap: 60px;

  margin: 50px 0px 20px 0px;
  width: 100%;
  height: 200px;
  background-color: #ff7b57;
}

.footer a {
  text-decoration: none;
  color: #fff;
  font-size: 20px;
  cursor: pointer;
}

.logoFooter {
  width: 80px;
  height: 60px;
}

.buttonContainer {
  display: flex;
  justify-content: center;
  margin: 30px 0px 0px 0px;
}

.buttonContainer img {
  width: 20px;
}

button {
  color: #fff;
  background-color: #ff7b57;
  border-radius: 20px;
  width: 80px;
  height: 70px;
  border: 1px solid #fff;
  transition: background-color 0.3s ease, color 0.3s ease;
  font-size: 16px;
}

button:hover {
  background-color: rgba(255, 123, 87, 0.6);
}

